fix home page text align

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -18,6 +18,7 @@ padding-top: 0px;
   align-items: flex-start;
   justify-content: flex-start;
   margin-right: 100px;
+  text-align: left;
 }
 
 /* .home-right{
